--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
   <hr class="text-white">
 
   <div class="list-group list-reset">
-    <button class="list-group-item list-group-item-action mb-2" *ngFor="let tag of tags">
+    <button (click)="searchTag(tag)" class="list-group-item list-group-item-action" *ngFor="let tag of tags">
       {{tag | titlecase}}
     </button>
   </div>
